            ---------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

12 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-34)
Fix for boundary-checking error
       include/G4NeutronHPProduct.hh
       include/G4NeutronHPContAngularPar.hh


11 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-33)
Fix for Bugzilla #1686
	src/G4NeutronHPElasticFS.cc


11 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-32)
Fix warning message in gcc4.1 compiler 
	include/G4NeutronHPEnAngCorrelation.hh


8 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-31)
Fix problem on single threading mode
	include/G4NeutronHPEnAngCorrelation.hh
	include/G4NeutronHPProduct.hh
	include/G4NeutronHPAngular.hh
	include/G4VNeutronHPEnergyAngular.hh
Fix missing "ifndef/define/endif"
	include/G4WendtFissionFragmentGenerator.hh


31 October 2014 Tatsumi Koi   (hadr-hpn-V10-00-30)
Fix reproducibility on multithreading mode
	include/G4NeutronHPEnAngCorrelation.hh
	include/G4NeutronHPProduct.hh
	include/G4NeutronHPAngular.hh
	include/G4VNeutronHPEnergyAngular.hh
	src/G4NeutronHPAngular.cc
	src/G4NeutronHPEnAngCorrelation.cc
	src/G4NeutronHPProduct.cc


27 October 2014 Tatsumi Koi   (hadr-hpn-V10-00-29)
Additional fix for problem on prvious tag on non multi thread library
	include/G4NeutronHPPhotonDist.hh
	src/G4NeutronHPPhotonDist.cc


26 October 2014 Tatsumi Koi   (hadr-hpn-V10-00-28)
Additional fix for problem on prvious tag on gcc4.4.7 compilers 


23 October 2014 Tatsumi Koi   (hadr-hpn-V10-00-27)
Avoid issuing Hash of NeutronHPVector from worker threads
	include/G4NeutronHPProduct.hh
	include/G4NeutronHPPartial.hh
	src/G4NeutronHPElasticFS.cc
Fix problem on prvious tag
	include/G4NeutronHPManager.hh

