@@ -14,6 +14,16 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+17 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-36)
+Fix potential overwritten problem Bugzilla#1689
+	include/G4NeutronHPInterpolator.hh
+
+
+17 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-35)
+Fix problem caused by QNAN on Windows 
+	src/G4FPYSamplingOps.cc
+
+
 12 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-34)
 Fix for boundary-checking error
        include/G4NeutronHPProduct.hh
